# Omicron

./: .gitignore  CMakeLists.txt  Omicron.srctrlprj  Omicron.vcxproj  Omicron.vcxproj.filters  __todo__.txt  omi_qt_moc.props  qto_moc.props
config/omicron/asset/: library.json
config/omicron/report/logging/: logging.json
config/omicron/res/: registry.json
config/omicron/runtime/boot/: startup.json
config/omicron/runtime/game/: game.json  game.linux.json
config/omicron/runtime/report/: shutdown.json
config/omicron/runtime/subsystems/: subsystems.json  subsystems.linux.json
data/: resources.arccol.0  resources.toc
dev/stats_queries/: comprehensive.query  startup.query
docs/design/: Tech.txt  Todo.txt
docs/doxygen/: config  header.html
ext/bullet/include/bullet/: CTestTestfile.cmake
ext/bullet/lib/win_x64/: BulletDynamics.lib  BulletFileLoader.lib  BulletInverseDynamics.lib  BulletInverseDynamicsUtils.lib  BulletSoftBody.lib  BulletWorldImporter.lib  LinearMath.lib
ext/bullet/lib/win_x86/: BulletCollision.lib  BulletDynamics.lib  BulletFileLoader.lib  BulletInverseDynamics.lib  BulletInverseDynamicsUtils.lib  BulletSoftBody.lib  BulletWorldImporter.lib  LinearMath.lib
ext/glfw-3.2.1/: cmake_uninstall.cmake
ext/glfw-3.2.1/docs/: Doxyfile
ext/glfw-3.2.1/docs/html/: annotated.html  bug.html  build_8dox.html  build_guide.html  classes.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  dir_7d046523570a4bf058ddf3b10b545b6c.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_defs_b.html  globals_defs_c.html  globals_defs_d.html  globals_defs_e.html  globals_defs_f.html  globals_defs_g.html  globals_defs_h.html  globals_defs_i.html  globals_defs_j.html  globals_defs_k.html  globals_defs_l.html  globals_defs_m.html  globals_defs_n.html  globals_defs_o.html  globals_defs_p.html  (+59 more)
ext/glfw-3.2.1/examples/: boing  gears  heightmap  particles  simple  splitview  wave
ext/glfw-3.2.1/tests/: clipboard  cursor  empty  events  gamma  glfwinfo  icon  iconify  joysticks  monitors  msaa  reopen  sharing  tearing  threads  timeout  title  windows
meta/core/subsystems/: subsystems.windows.json
meta/omicron/runtime/logging/: logging.json  logging.unix.json
meta/omicron/runtime/subsystems/: subsystems.windows.json
meta/omicron_runtime/logging/: logging.json
meta/omicron_runtime/subsystems/: subsystems.linux.json  subsystems.windows.json
proto/bullet/: HelloWorld.cpp
proto/tracer/: Main.cpp  MainWindow.cpp  MainWindow.hpp  moc.props
res/pxtrace/shaders/: framebuffer.fragment.glsl  framebuffer.vertex.glsl
src/cpp/builtin_subsystems/omi_al/: ALSubsystem.cpp  ALSubsystem.hpp
src/cpp/builtin_subsystems/omi_al/__buildsys/: CMakeLists.txt
src/cpp/builtin_subsystems/omi_bullet/: BulletSubsystem.cpp  BulletSubsystem.hpp
src/cpp/builtin_subsystems/omi_deathray/: DeathGlobals.cpp  DeathGlobals.hpp  DeathSubsystem.cpp  DeathSubsystem.hpp
src/cpp/builtin_subsystems/omi_deathray/__buildsys/: CMakeLists.txt
src/cpp/builtin_subsystems/omi_gl/: GLBootstrap.cpp  GLBootstrap.hpp  GLGlobals.cpp  GLGlobals.hpp  GLSubsystem.cpp  GLSubsystem.hpp
src/cpp/builtin_subsystems/omi_gl/__buildsys/: CMakeLists.txt
src/cpp/builtin_subsystems/omi_glfw/: GLFWGlobals.cpp  GLFWGlobals.hpp  GLFWInput.cpp  GLFWInput.hpp  GLFWSubsystem.cpp  GLFWSubsystem.hpp  GLFWSurface.cpp  GLFWSurface.hpp  OmiGLFWRegister.cpp
src/cpp/builtin_subsystems/omi_glfw/__buildsys/: CMakeLists.txt
src/cpp/builtin_subsystems/omi_qt/: MainWindow.cpp  MainWindow.hpp  QTBootstrap.cpp  QTBootstrap.hpp  QTGlobals.cpp  QTGlobals.hpp  QTSubsystem.cpp  QTSubsystem.hpp  QtBootstrap.cpp  QtBootstrap.hpp  QtGlobals.cpp  QtGlobals.hpp  QtMainWindow.cpp  QtMainWindow.hpp
src/cpp/builtin_subsystems/omi_qt/__buildsys/: CMakeLists.txt  moc_MainWindow.cpp  moc_QtMainWindow.cpp  omi_qt_automoc.cpp
src/cpp/builtin_subsystems/pxtrace/: Camera.cpp  Camera.hpp  FrameBuffer.cpp  FrameBuffer.hpp  PXGlobals.cpp  PXGlobals.hpp  PXSubsystem.cpp  PXSubsystem.hpp  Sphere.cpp  Sphere.hpp
src/cpp/builtin_subsystems/pxtrace/__buildsys/: CMakeLists.txt
src/cpp/builtin_subsystems/qto/: QTOSubsystem.cpp  QTOSubsystem.hpp  __qto.hpp
src/cpp/builtin_subsystems/qto/__buildsys/: CMakeLists.txt
src/cpp/hellbound/: GameRegistration.cpp  HellboundGlobals.cpp  HellboundGlobals.hpp
src/cpp/hellbound/__buildsys/: CMakeLists.txt
src/cpp/hellbound/entities/: GameManager.cpp
src/cpp/hellbound/scripts/: Startup.cpp
src/cpp/omicron/: Engine.cpp  Engine.hpp  Main.cpp  TestEntity.cpp  TestEntity.hpp  TestScene.cpp  TestScene.hpp  __omicron.hpp
src/cpp/omicron/__buildsys/: CMakeLists.txt
src/cpp/omicron/api/: API.hpp  GameInterface.hpp
src/cpp/omicron/api/__buildsys/: CMakeLists.txt
src/cpp/omicron/config/: ConfigGlobals.cpp  ConfigGlobals.hpp  ConfigInline.hpp  __config.hpp
src/cpp/omicron/meta/: MetaGlobals.cpp  MetaGlobals.hpp  MetaInline.hpp  __meta.hpp
src/cpp/omicron/private/: Engine.cpp  Engine.hpp  Logging.cpp  Logging.hpp  MetaCompiled.hpp  SubsystemManager.cpp  SubsystemManager.hpp  __private.hpp
src/cpp/omicron/proto/: Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp
src/cpp/omicron/report/: Logging.cpp  Logging.hpp  Proto.cpp  Proto.hpp  ReportBoot.cpp  ReportBoot.hpp  ReportGlobals.cpp  ReportGlobals.hpp
src/cpp/omicron/report/__buildsys/: CMakeLists.txt
src/cpp/omicron/runtime/__buildsys/: CMakeLists.txt
src/cpp/omicron_runtime/: Engine.cpp  Engine.hpp  Main.cpp  __runtime.hpp
src/cpp/omicron_runtime/__buildsys/: CMakeLists.txt
src/cpp/oss/: Audio.hpp  Input.hpp  Physics.hpp  Renderer.hpp  Subsystem.hpp  UI.hpp  WindowManager.hpp  __oss.hpp
tests/cpp/: TestsMain.cpp
tests/cpp/__buildsys/: CMakeLists.txt
tools/: collate_resources.bash  w_build.bat  w_build_lib.bat  w_build_test_api.bat  w_built.bat
(+364 files in other folders)
