# # source files for the omicron runtime
# set(OMICRON_RUNTIME_SRC
#     ../Main.cpp
#     ../private/Engine.cpp
# )

# # build the omicron runtime executable
# add_executable(omicron ${OMICRON_RUNTIME_SRC})

# # link libraries to the omicron runtime
# target_link_libraries(omicron
#     arcanecollate_lib
#     metaengine
#     arcanelog
#     arcanecore_io
#     arcanecore_base
# )
